# hamcalc

./: .gitignore  HAMCALC_DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: android-release.yml  deploy.yml
docs/images/: README.md
scripts/: screenshots.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  Keyboard.tsx  MatrixGrid.tsx  OutputPanel.tsx  ParametersPanel.tsx  SizeModal.tsx  Tex.tsx
src/lib/: shortcuts.ts  store.ts
src/lib/latex/: render.ts
src/lib/parser/: normalize.ts  parse.ts
src/lib/solver/: solver.ts  steps.ts
src/styles/: globals.css
